fix: hover to visible button

--- a/src/app/components/child/child.component.scss
+++ b/src/app/components/child/child.component.scss
@@ -5,7 +5,10 @@ div {
 }
 
 button {
-    visibility: hidden;
+    opacity: 0;
     float: right;
     margin: -10px -10px 0 0;
+}
+div:hover button {
+    opacity: 1;
 }
